@startuml Statements
skinparam style strictuml
skinparam monochrome false


interface ASTNode #b1e8f0 {
    getLine(): int
    getColumn(): int
}

interface Statement

class If {
    condition: Expression
    ifBody: List<Statement>
    elseBody: List<Statement>
}

class Write {
    expressions : Expression
}

class Read {
    expressions : Expression
}

class While {
    condition : Expression
    whileBody : List<Statement>
}

class Assignment {
    leftExpression : Expression
    rightExpression : Expression
}

class Return {
    returnType : Expression
}

ASTNode <|-- Statement

Statement <|.. Write
Statement <|.. Read
Statement <|.. If
Statement <|.. While
Statement <|.. Return
Statement <|.. Assignment

If o--"1" Expression
Write o--"1" Expression
Read o--"1" Expression
While o--"1" Expression
Assignment o--"2" Expression
Return o--"1" Expression

If o--"0..n" Statement
While o--"0..n" Statement

@enduml
